--- a/index.html
+++ b/index.html
@@ -30,49 +30,69 @@
     </header>
 
     <section id="accueil">
-        <div>
-            <h2>Bienvenue sur mon site professionnel</h2>
-            <p>Je suis ravi de vous accueillir ici. Je m'appelle Paul Bréon et je suis étudiant en école d'ingénieur
-                informatique au CESI de Rouen. Ce site a été conçu pour vous présenter mon parcours, mes compétences et
-                mes passions dans le domaine de l'informatique et au-delà.</p>
-            <p>Ce site est également l'occasion de partager mes réflexions sur les nouvelles technologies, comme
-                l'intelligence artificielle (IA) ou le développement de jeux vidéo qui représente des domaines qui me
-                fascine et qui suscite mon
-                enthousiasme pour les possibilités futures.</p>
-            <p>Je vous invite à explorer les différentes sections de mon site pour en savoir plus sur mon parcours
-                professionnel, mes compétences techniques, mes projets passés et futurs, ainsi que mes autres intérêts.
-                N'hésitez pas à me contacter si vous souhaitez échanger ou collaborer sur des projets innovants.</p>
-            <p>Je vous remercie de votre visite et je vous souhaite une excellente découverte de mon univers numérique !
-            </p>
+        <div class="container">
+            <div class="content">
+                <h2>Bienvenue sur mon site professionnel</h2>
+                <p>Je suis ravi de vous accueillir ici. Je m'appelle Paul Bréon et je suis étudiant en école d'ingénieur
+                    informatique au CESI de Rouen. Ce site a été conçu pour vous présenter mon parcours, mes compétences
+                    et
+                    mes passions dans le domaine de l'informatique et au-delà.</p>
+                <p>Ce site est également l'occasion de partager mes réflexions sur les nouvelles technologies, comme
+                    l'intelligence artificielle (IA) ou le développement de jeux vidéo qui représente des domaines qui
+                    me
+                    fascine et qui suscite mon
+                    enthousiasme pour les possibilités futures.</p>
+                <p>Je vous invite à explorer les différentes sections de mon site pour en savoir plus sur mon parcours
+                    professionnel, mes compétences techniques, mes projets passés et futurs, ainsi que mes autres
+                    intérêts.
+                    N'hésitez pas à me contacter si vous souhaitez échanger ou collaborer sur des projets innovants.</p>
+                <p>Je vous remercie de votre visite et je vous souhaite une excellente découverte de mon univers
+                    numérique !
+                </p>
+            </div>
+            <div class="image">
+                <img src="dl-files/Moi.jpg" alt="Image À Propos">
+            </div>
         </div>
     </section>
     <div class="separator"></div>
 
     <section id="apropos">
-        <div>
-            <h2>À Propos de Moi</h2>
-            <p>Je suis Paul Bréon, un étudiant en école d'ingénieur informatique au CESI de Rouen. Actuellement en
-                alternance au sein du laboratoire de recherche du CESI LINEACT, je me spécialise dans les domaines
-                passionnants de la réalité virtuelle et augmentée. Grâce à cette expérience, j'ai développé de
-                nombreuses compétences en informatique, notamment dans le développement en général, la programmation
-                orientée objet (POO) ainsi que dans le domaine des réseaux.</p>
+        <div class="container">
+            <div class="content">
+                <h2>À Propos de Moi</h2>
+                <p>Je suis Paul Bréon, un étudiant en école d'ingénieur informatique au CESI de Rouen. Actuellement en
+                    alternance au sein du laboratoire de recherche du CESI LINEACT, je me spécialise dans les domaines
+                    passionnants de la réalité virtuelle et augmentée. Grâce à cette expérience, j'ai développé de
+                    nombreuses compétences en informatique, notamment dans le développement en général, la programmation
+                    orientée objet (POO) ainsi que dans le domaine des réseaux.</p>
 
-            <p> dehors de ma passion pour l'informatique, je suis un fervent musicien impliqué au sein de la Société
-                Musicale de Criquetot l'Esneval. En tant que batteur et chef d'orchestre pour l'orchestre des jeunes, la
-                musique occupe une place très spéciale dans ma vie.</p>
+                <p> dehors de ma passion pour l'informatique, je suis un fervent musicien impliqué au sein de la Société
+                    Musicale de Criquetot l'Esneval. En tant que batteur et chef d'orchestre pour l'orchestre des
+                    jeunes, la
+                    musique occupe une place très spéciale dans ma vie.</p>
 
-            <p>Mon enthousiasme pour l'informatique va de pair avec mon intérêt pour les nouvelles technologies, comme
-                l'intelligence artificielle (IA) ou le développement de jeux vidéo (j'utilise le moteur Unity). J'aime
-                explorer les possibilités fascinantes offertes par ces avancées technologiques qui façonnent notre
-                avenir.</p>
+                <p>Mon enthousiasme pour l'informatique va de pair avec mon intérêt pour les nouvelles technologies,
+                    comme
+                    l'intelligence artificielle (IA) ou le développement de jeux vidéo (j'utilise le moteur Unity).
+                    J'aime
+                    explorer les possibilités fascinantes offertes par ces avancées technologiques qui façonnent notre
+                    avenir.</p>
 
-            <p>Je suis constamment à la recherche de nouvelles opportunités d'apprendre, de grandir professionnellement
-                et de contribuer positivement à l'innovation technologique. N'hésitez pas à me contacter si vous
-                souhaitez en savoir plus sur mes projets, mon parcours ou discuter de collaborations potentielles.</p>
+                <p>Je suis constamment à la recherche de nouvelles opportunités d'apprendre, de grandir
+                    professionnellement
+                    et de contribuer positivement à l'innovation technologique. N'hésitez pas à me contacter si vous
+                    souhaitez en savoir plus sur mes projets, mon parcours ou discuter de collaborations potentielles.
+                </p>
 
-            <p>Au plaisir de vous rencontrer virtuellement ou en personne pour partager nos passions communes !</p>
+                <p>Au plaisir de vous rencontrer virtuellement ou en personne pour partager nos passions communes !</p>
+            </div>
+            <div class="image">
+                <img src="dl-files/_MG_0306.JPG" alt="Image À Propos">
+            </div>
         </div>
     </section>
+
     <div class="separator"></div>
 
     <section id="competences">
@@ -110,14 +130,39 @@
     <div class="separator"></div>
 
     <section id="projets">
-        <div>
-            <h2>Projets Réalisés</h2>
-            <p>Vous pourrez trouver certains de mes projets sur mon Github personnel.</p>
+        <h2 style="text-align: center;">Projets Réalisés</h2>
+        <p style="text-align: center;">Vous pourrez trouver certains de mes projets sur mon Github personnel.</p>
+        <div class="container">
+        <div class="content" style="text-align: center;">
             <h3>1ère année au CESI</h3>
-
-            <h3>2ème année au CESI</h3>
-
+            <ul>
+                <h4>Bloc Électronique</h4>
+                <p>Dans ce bloc</p>
+                <h4>Bloc Onde et Signaux</h4>
+                <p>Dans ce bloc</p>
+                <h4>Bloc Mécanique</h4>
+                <p>Dans ce bloc</p>
+                <h4>Bloc Industrie</h4>
+                <p>Dans ce bloc</p>
+                <h4>Bloc BTP</h4>
+                <p>Dans ce bloc</p>
+            </ul>
         </div>
+        <div class="content" style="text-align: center;">
+            <h3>2ème année au CESI</h3>
+            <ul>
+                <h4>Bloc Électronique et systèmes embarqués</h4>
+                <p>Dans ce bloc</p>
+                <h4>Bloc Programmation Orientée Objet</h4>
+                <p>Dans ce bloc</p>
+                <h4>Bloc Réseau</h4>
+                <p>Dans ce bloc</p>
+                <h4>Bloc Web</h4>
+                <p>Dans ce bloc</p>
+            </ul>
+        </div>
+        </div>
+    </div>
     </section>
     <div class="separator"></div>
 
