Update personnal projects

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil site Paul Bréon</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+    <script src="script.js"></script>
+    <link rel="icon" type="image/png" href="dl-files/215Games.png">
 </head>
 
 <body>
@@ -130,50 +133,89 @@
     <div class="separator"></div>
 
     <section id="projets">
-        <h2 style="text-align: center;">Projets Réalisés</h2>
+        <h2 style="text-align: center;">Projets Réalisés au CESI</h2>
         <p style="text-align: center;">Vous pourrez trouver certains de mes projets sur mon Github personnel.</p>
         <div class="container">
-        <div class="content" style="text-align: center;">
-            <h3>1ère année au CESI</h3>
-            <ul>
-                <h4>Bloc Électronique</h4>
-                <p>Dans ce bloc</p>
-                <h4>Bloc Onde et Signaux</h4>
-                <p>Dans ce bloc</p>
-                <h4>Bloc Mécanique</h4>
-                <p>Dans ce bloc</p>
-                <h4>Bloc Industrie</h4>
-                <p>Dans ce bloc</p>
-                <h4>Bloc BTP</h4>
-                <p>Dans ce bloc</p>
-            </ul>
+            <div class="content" style="text-align: center;">
+                <h3>1ère année au CESI</h3>
+                <ul>
+                    <h4>Bloc Électronique</h4>
+                    <p>Dans ce bloc</p>
+                    <h4>Bloc Onde et Signaux</h4>
+                    <p>Dans ce bloc</p>
+                    <h4>Bloc Mécanique</h4>
+                    <p>Dans ce bloc</p>
+                    <h4>Bloc Industrie</h4>
+                    <p>Dans ce bloc</p>
+                    <h4>Bloc BTP</h4>
+                    <p>Dans ce bloc</p>
+                </ul>
+            </div>
+            <div class="content" style="text-align: center;">
+                <h3>2ème année au CESI</h3>
+                <ul>
+                    <h4>Bloc Électronique et systèmes embarqués</h4>
+                    <p>Dans ce bloc</p>
+                    <h4>Bloc Programmation Orientée Objet</h4>
+                    <p>Dans ce bloc</p>
+                    <h4>Bloc Réseau</h4>
+                    <p>Dans ce bloc</p>
+                    <h4>Bloc Web</h4>
+                    <p>Dans ce bloc</p>
+                </ul>
+            </div>
         </div>
-        <div class="content" style="text-align: center;">
-            <h3>2ème année au CESI</h3>
-            <ul>
-                <h4>Bloc Électronique et systèmes embarqués</h4>
-                <p>Dans ce bloc</p>
-                <h4>Bloc Programmation Orientée Objet</h4>
-                <p>Dans ce bloc</p>
-                <h4>Bloc Réseau</h4>
-                <p>Dans ce bloc</p>
-                <h4>Bloc Web</h4>
-                <p>Dans ce bloc</p>
-            </ul>
         </div>
+    </section>
+    <div class="separator"></div>
+
+    <section id="projets">
+        <h2 style="text-align: center;">Projets Personnels</h2>
+        <p style="text-align: center;">Vous pourrez trouver certains de mes projets sur mon Github personnel.</p>
+        <p style="text-align: center;">215Games</p>
+        <p style="text-align: center;">(nom sous lequel je publie mes jeux vidéos)</p>
+        <div class="imageCenter">
+            <img src="dl-files/215Games.png" alt="">
         </div>
-    </div>
+        <div class="container">
+            <div class="content" style="text-align: center;">
+                <h3>Dimension Game</h3>
+                <h4>Présentation</h4>
+                <p>Ce projet est un jeu de plateformes casse-tête qui joue sur la perspective entre plusieurs dimensions
+                    notamment la 2D et la 3D.</p>
+                <p>Ce projet m'a permis d'apprendre le développement en Programmation Orientée Objet puis de
+                    l'approfondir pas à pas tout en découvrant le moteur de jeu Unity.</p>
+                <h4>Visuel</h4>
+                <img src="dl-files/3 2 1 Dimensions ! 2023-07-22 12-45-32.mp4" alt="Vidéo demo jeu">
+            </div>
+            <div class="content" style="text-align: center;">
+                <h3>VR Ping Pong</h3>
+                <h4>Présentation</h4>
+                <p>Ce projet est un jeu en réalité virtuelle qui permet de s'amuser à jouer au ping pong dans un univers
+                    virtuel.</p>
+                <p>Ce projet m'a permis d'approfondir mes compétences en réalité virtuelle comme en Unity et la gestion
+                    de ses différents packages mais aussi sur les interractions que peuvent avoir un joueur dans un
+                    espace virtuel.</p>
+                <h4>Visuel</h4>
+            </div>
+        </div>
+        <p style="text-align: center;">Lors de ses deux porjets j'ai appris aussi à faire mes propres recherche et à me creuser la tête afin
+            d'aller toujours plus loin, chercher des idées, des solutions aux multiples problèmes auxquels j'ai été
+            confrontés et toujours m'assurer de documenter ce que je fais y compris et surtout les tests que je
+            faisais afin de ne plus refaire les mêmes erreurs à l'avenir et d'être certain d'avoir appris de
+            celles-ci.</p>
+        </div>
     </section>
     <div class="separator"></div>
 
     <section id="contact">
         <div>
             <h2>Contact</h2>
-            <p>Donne aux visiteurs un moyen de te contacter, que ce soit par e-mail, téléphone ou formulaire de contact.
-            </p>
+            <p>paul.breon.pb@gmail.com</p>
+            <p>07 78 32 07 54</p>
+            <p>paul.breon.pb@gmail.com</p>
         </div>
     </section>
-    <div class="separator"></div>
 
     <footer>
         <p>Droit d'auteur © 2023 Bréon Paul</p>
