--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@
                 <h4>Visuel</h4>
             </div>
         </div>
-        <p style="text-align: center;">Lors de ses deux porjets j'ai appris aussi à faire mes propres recherche et à me creuser la tête afin
+        <p style="text-align: center;">Lors de ses deux porjets j'ai appris aussi à faire mes propres recherche et à me
+            creuser la tête afin
             d'aller toujours plus loin, chercher des idées, des solutions aux multiples problèmes auxquels j'ai été
             confrontés et toujours m'assurer de documenter ce que je fais y compris et surtout les tests que je
             faisais afin de ne plus refaire les mêmes erreurs à l'avenir et d'être certain d'avoir appris de
@@ -213,7 +214,10 @@
             <h2>Contact</h2>
             <p>paul.breon.pb@gmail.com</p>
             <p>07 78 32 07 54</p>
-            <p>paul.breon.pb@gmail.com</p>
+            <div class="buttons"><a href="dl-files/CV Paul Bréon.pdf" class="btn-cv">Mon CV</a>
+                <a href="https://github.com/PoloBrn" class="btn-github">GitHub</a>
+                <a href="https://www.linkedin.com/in/paul-br%C3%A9on-b7a083257/" class="btn-linkedin">LinkedIn</a>
+            </div>
         </div>
     </section>
 
