--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <header style="background-image: url('dl-files/Moi-VR.jpg');">
         <div class="header-overlay">
             <h1>Bréon Paul</h1>
+            <h2>Étudiant en école d'ingénieur Informatique CESI</h2>
+            <h3>Passionné de Musique et nouvelles technologies</h3>
             <nav>
                 <ul>
                     <li><a href="#accueil">Accueil</a></li>
@@ -35,7 +37,7 @@
     <section id="accueil">
         <div class="container">
             <div class="content">
-                <h2>Bienvenue sur mon site professionnel</h2>
+                <h2 style="text-align: center;">Bienvenue sur mon univers virtuel</h2>
                 <p>Je suis ravi de vous accueillir ici. Je m'appelle Paul Bréon et je suis étudiant en école d'ingénieur
                     informatique au CESI de Rouen. Ce site a été conçu pour vous présenter mon parcours, mes compétences
                     et
@@ -63,7 +65,7 @@
     <section id="apropos">
         <div class="container">
             <div class="content">
-                <h2>À Propos de Moi</h2>
+                <h2 style="text-align: center;">À Propos de Moi</h2>
                 <p>Je suis Paul Bréon, un étudiant en école d'ingénieur informatique au CESI de Rouen. Actuellement en
                     alternance au sein du laboratoire de recherche du CESI LINEACT, je me spécialise dans les domaines
                     passionnants de la réalité virtuelle et augmentée. Grâce à cette expérience, j'ai développé de
@@ -100,7 +102,7 @@
 
     <section id="competences">
         <div>
-            <h2>Compétences</h2>
+            <h2 style="text-align: center;">Compétences</h2>
             <ul>
                 <li>Programmation Orientée Objet</li>
                 <li>C#</li>
@@ -140,28 +142,56 @@
                 <h3>1ère année au CESI</h3>
                 <ul>
                     <h4>Bloc Électronique</h4>
-                    <p>Dans ce bloc</p>
+                    <p>Au cours de cette première année, j'ai acquis des connaissances approfondies dans le domaine de
+                        l'électronique. J'ai étudié les composants électroniques de base tels que les résistances, les
+                        condensateurs, les transistors, ainsi que les circuits logiques et les microcontrôleurs. J'ai
+                        également appris à concevoir et à réaliser des circuits électroniques simples.</p>
                     <h4>Bloc Onde et Signaux</h4>
-                    <p>Dans ce bloc</p>
+                    <p>Dans ce bloc, j'ai exploré les concepts fondamentaux des ondes et des signaux. J'ai compris les
+                        principes de la propagation des ondes électromagnétiques et des signaux analogiques et
+                        numériques. J'ai également étudié les différentes méthodes de traitement du signal.</p>
                     <h4>Bloc Mécanique</h4>
-                    <p>Dans ce bloc</p>
+                    <p>Ce bloc m'a permis de développer une solide compréhension des principes de base de la mécanique.
+                        J'ai appris les lois du mouvement, les notions de statique et de dynamique, ainsi que les
+                        propriétés des matériaux. J'ai également eu l'occasion de mettre en pratique mes connaissances à
+                        travers des projets pratiques.</p>
                     <h4>Bloc Industrie</h4>
-                    <p>Dans ce bloc</p>
+                    <p>Au sein de ce bloc, j'ai découvert le fonctionnement de l'industrie moderne. J'ai étudié les
+                        processus de production, la gestion de la chaîne d'approvisionnement, les normes de qualité,
+                        ainsi que les principes de gestion de projet. Cela m'a donné un aperçu global du monde
+                        industriel dans lequel j'allais évoluer en tant qu'ingénieur.</p>
                     <h4>Bloc BTP</h4>
-                    <p>Dans ce bloc</p>
+                    <p>Dans ce bloc, j'ai exploré le secteur du bâtiment et des travaux publics. J'ai acquis des
+                        connaissances sur la conception architecturale, les matériaux de construction, les techniques de
+                        construction, ainsi que les aspects liés à la sécurité sur les chantiers ou encore les notions
+                        de Résistance des Matériaux et de Thermodynamique. Cela m'a ouvert de
+                        nouvelles perspectives sur les domaines d'application de l'ingénierie.</p>
                 </ul>
             </div>
             <div class="content" style="text-align: center;">
-                <h3>2ème année au CESI</h3>
+                <h3 style="text-align: center;">2ème année au CESI</h3>
                 <ul>
                     <h4>Bloc Électronique et systèmes embarqués</h4>
-                    <p>Dans ce bloc</p>
+                    <p>Poursuivant mon parcours, j'ai approfondi mes connaissances en électronique en me concentrant
+                        spécifiquement sur les systèmes embarqués. J'ai étudié la conception de systèmes électroniques
+                        complexes et leur intégration dans des appareils embarqués tels que les systèmes embarqués dans
+                        l'automobile, les dispositifs médicaux et bien d'autres.</p>
                     <h4>Bloc Programmation Orientée Objet</h4>
-                    <p>Dans ce bloc</p>
+                    <p>Dans ce bloc, j'ai appris les principes de la programmation orientée objet (POO). J'ai développé
+                        des compétences en programmation dans le language C++ en mettant
+                        l'accent sur la modélisation des objets, l'héritage, l'encapsulation et le polymorphisme et la
+                        liaison à une base de données. Ces
+                        compétences sont essentielles pour la conception de logiciels et la résolution de problèmes
+                        informatiques.</p>
                     <h4>Bloc Réseau</h4>
-                    <p>Dans ce bloc</p>
+                    <p>Ce bloc m'a permis de comprendre les réseaux informatiques, leur architecture, leur
+                        fonctionnement et leur sécurité. J'ai étudié les protocoles de communication, les commutateurs,
+                        les routeurs, ainsi que les concepts de virtualisation et de cloud computing.</p>
                     <h4>Bloc Web</h4>
-                    <p>Dans ce bloc</p>
+                    <p>Dans ce dernier bloc, j'ai acquis des compétences en développement web. J'ai appris à concevoir
+                        des sites web interactifs en utilisant des technologies telles que HTML, CSS, JavaScript, et
+                        j'ai également étudié les bases de données et la gestion de l'information sur le web ainsi que
+                        la communication avec une base de données.</p>
                 </ul>
             </div>
         </div>
