--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <p>Au plaisir de vous rencontrer virtuellement ou en personne pour partager nos passions communes !</p>
             </div>
             <div class="image">
-                <img src="dl-files/_MG_0306.JPG" alt="Image À Propos">
+                <img src="dl-files/Batterie.jpg" alt="Image À Propos">
             </div>
         </div>
     </section>
