--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <p>Ce projet m'a permis d'apprendre le développement en Programmation Orientée Objet puis de
                     l'approfondir pas à pas tout en découvrant le moteur de jeu Unity.</p>
                 <h4>Visuel</h4>
-                <video src="dl-files/3 2 1 Dimensions ! 2023-07-22 12-45-32.gif">Ah</video>
+                <video src="dl-files/3 2 1 Dimensions ! 2023-07-22 12-45-32.mp4"></video>
             </div>
             <div class="content" style="text-align: center;">
                 <h3>VR Ping Pong</h3>
