--- a/index.html
+++ b/index.html
@@ -182,7 +182,11 @@
                 <p>Ce projet m'a permis d'apprendre le développement en Programmation Orientée Objet puis de
                     l'approfondir pas à pas tout en découvrant le moteur de jeu Unity.</p>
                 <h4>Visuel</h4>
-                <video src="dl-files/3 2 1 Dimensions ! 2023-07-22 12-45-32.mp4"></video>
+                <video controls autoplay loop>
+                    <source src="dl-files/3 2 1 Dimensions ! 2023-07-22 12-45-32.mp4" type="video/mp4">
+                    Votre navigateur ne prend pas en charge la lecture de vidéos.
+                </video>
+                
             </div>
             <div class="content" style="text-align: center;">
                 <h3>VR Ping Pong</h3>
